Moje soubory - dynamika obsahu

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -68,7 +68,11 @@
   .icon(@fa-var-folder-open, "d");
 }
 
-.file-i {
+.folder-special-i {
+  .icon(@fa-var-folder-open, "r");
+}
+
+.file-general-i {
   .icon(@fa-var-file, "s");
 }
 
