--- a/src-front/less/components/_graphs.less
+++ b/src-front/less/components/_graphs.less
@@ -7,6 +7,7 @@
   .progress-bar-content {
     background: @dark-yellow;
     height: 100%;
+    width: 0;
     display: block;
     border-radius: 10px;
   }
