--- a/src/views/Application/private-files.latte
+++ b/src/views/Application/private-files.latte
@@ -100,7 +100,12 @@
                         {/if}
                     </td>
                     <td class="action">
-                        <div class="action-container">
+                        {* TODO: add class "active" if the file is shared *}
+                        <div class="action-container shared">
+                            {* TODO: Set class to: from-class-i || from-schoolmate-i *}
+                            <i class="from-class-i"></i>
+                        </div>
+                        <div class="action-container not-shared">
                             <a href="javascript:void(0);" class="action-link text _share-file" data-id="{$privateFile->getId()}">Sdílet</a>
                             <a href="javascript:void(0);" class="link-with-icon icon _share-file" data-id="{$privateFile->getId()}"><i class="share-i"></i></a>
                         </div>
@@ -182,6 +187,41 @@
                         {* END Progress template *}
                         </tbody>
                     </table>
+                </section>
+            </div>
+
+            <div class="alert-box _alert hide" data-id="share-file">
+                <header class="alert-header">
+                    <h3 class="alert-heading">Sdílení</h3>
+                </header>
+
+                <section class="alert-content">
+                    <form class="alert-form _alert-form">
+                        <div class="form-inputs">
+                            <div class="choose-variant-row">
+                                <input class="radio-input" type="radio" name="share-with" value="class" id="share-with-class" checked />
+                                <label for="share-with-class" class="radio-label"><i class="from-class-i radio-label-icon"></i>se třídou</label>
+                            </div>
+                            <div class="choose-variant-row">
+                                <input class="radio-input" type="radio" name="share-with" value="user" id="share-with-schoolmate" />
+                                <label for="share-with-schoolmate" class="radio-label"><i class="from-schoolmate-i radio-label-icon"></i>se spolužákem</label>
+                            </div>
+
+                            <div class="additional-data">
+                                <select name="schoolmate" class="form-select" title="Vyber spolužáka">
+                                    <option disabled selected>Vyber spolužáka</option>
+                                    {* TODO: Generated dynamically *}
+                                    <option value="1">Michal ŠMAHEL</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-alerts"></div>
+
+                        <div class="form-control">
+                            <input type="submit" value="Sdílet" class="form-button alert" />
+                        </div>
+                    </form>
                 </section>
             </div>
         </div>
