--- a/src-front/less/pages/_my-reminders-and-notes.less
+++ b/src-front/less/pages/_my-reminders-and-notes.less
@@ -30,7 +30,7 @@
 
           .record-row {
             display: grid;
-            grid-template-columns: 2.5em 1.5em auto 1.4em 1em;
+            grid-template-columns: 2.5em 1.5em auto 1.4em 1.4em 1em;
 
             &:not(:first-child) {
               border-top: 2px solid @middle-grey;
@@ -39,9 +39,8 @@
             }
 
             .action {
-              color: @dark-green;
-              cursor: pointer;
-              font-size: @font-s - 0.01em;
+              &:extend(.my-reminders-notes .page .content-container .content-row .action all);
+
               margin-top: .3em;
             }
           }
@@ -57,7 +56,7 @@
   .content-container {
     .content-row {
       display: grid;
-      grid-template-columns: auto 1.4em 1em;
+      grid-template-columns: auto 1.4em 1.4em 1em;
 
       &:not(:first-child) {
         border-top: 2px solid @middle-grey;
@@ -69,6 +68,28 @@
         color: @dark-green;
         cursor: pointer;
         font-size: @font-s - 0.01em;
+
+        .shared {
+          color: @text-c;
+        }
+
+        .shared:not(.active) {
+          display: none;
+        }
+
+        .shared.active + .not-shared {
+          display: none;
+        }
+
+        &:hover {
+          .shared.active + .not-shared {
+            display: initial;
+          }
+
+          .shared.active {
+            display: none;
+          }
+        }
       }
     }
   }
