--- a/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
+++ b/src-front/templates/aplikacni-vrstva/moje-upozorneni-a-poznamky.html
@@ -79,6 +79,10 @@
                             <span class="description">Přečíst ukázku z učebnice na str. 68</span>
                             <i class="action edit-i"></i>
                             <i class="action delete-i"></i>
+                            <div class="action">
+                                <i class="from-schoolmate-i shared"></i>
+                                <i class="share-i not-shared"></i>
+                            </div>
                         </div>
                         <div class="record-row">
                             <span class="subject school-subject">FAR</span>
@@ -86,6 +90,10 @@
                             <span class="description">Malířství, Fotografie</span>
                             <i class="action edit-i"></i>
                             <i class="action delete-i"></i>
+                            <div class="action">
+                                <i class="from-schoolmate-i shared active"></i>
+                                <i class="share-i not-shared"></i>
+                            </div>
                         </div>
                     </div>
 
@@ -99,6 +107,10 @@
                             <span class="description">Prezentace - Edouard Manet</span>
                             <i class="action edit-i"></i>
                             <i class="action delete-i"></i>
+                            <div class="action">
+                                <i class="from-class-i shared active"></i>
+                                <i class="share-i not-shared"></i>
+                            </div>
                         </div>
                         <div class="record-row">
                             <span class="subject school-subject">DVK</span>
@@ -106,6 +118,10 @@
                             <span class="description">Renesanční malba v Itálii, Renesanční sloh v ostatní Evropě</span>
                             <i class="action edit-i"></i>
                             <i class="action delete-i"></i>
+                            <div class="action">
+                                <i class="from-class-i shared active"></i>
+                                <i class="share-i not-shared"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -122,6 +138,10 @@
                             <span class="description">Divadlo - Romeo a Julie</span>
                             <i class="action edit-i"></i>
                             <i class="action delete-i"></i>
+                            <div class="action">
+                                <i class="from-class-i shared"></i>
+                                <i class="share-i not-shared"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -134,6 +154,10 @@
                             <span class="description">Marketing</span>
                             <i class="action edit-i"></i>
                             <i class="action delete-i"></i>
+                            <div class="action">
+                                <i class="from-class-i shared"></i>
+                                <i class="share-i not-shared"></i>
+                            </div>
                         </div>
                         <div class="record-row">
                             <span class="subject school-subject">ANJ</span>
@@ -141,6 +165,10 @@
                             <span class="description">Slovíčka 6. lekce</span>
                             <i class="action edit-i"></i>
                             <i class="action delete-i"></i>
+                            <div class="action">
+                                <i class="from-class-i shared active"></i>
+                                <i class="share-i not-shared"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -209,21 +237,37 @@
                 <p>Od 16. 9. nosit sbírku Petáková</p>
                 <i class="action edit-i"></i>
                 <i class="action delete-i"></i>
+                <div class="action">
+                    <i class="from-class-i shared active"></i>
+                    <i class="share-i not-shared"></i>
+                </div>
             </div>
             <div class="content-row">
                 <p>SRPŠ bude nejspíše ve středu 6. 11.</p>
                 <i class="action edit-i"></i>
                 <i class="action delete-i"></i>
+                <div class="action">
+                    <i class="from-schoolmate-i shared active"></i>
+                    <i class="share-i not-shared"></i>
+                </div>
             </div>
             <div class="content-row">
                 <p>Příští týden (4. 11. až 8. 11.) mám službu - dávat pozor na mytí tabule a nošení pomůcek</p>
                 <i class="action edit-i"></i>
                 <i class="action delete-i"></i>
+                <div class="action">
+                    <i class="from-class-i shared"></i>
+                    <i class="share-i not-shared"></i>
+                </div>
             </div>
             <div class="content-row">
                 <p>27. 11. bude přednáškový den. Bylo by dobré sehnat nějakého řečníka. Nápady: někdo z ITnetwork, Karel z Freela</p>
                 <i class="action edit-i"></i>
                 <i class="action delete-i"></i>
+                <div class="action">
+                    <i class="from-class-i shared"></i>
+                    <i class="share-i not-shared"></i>
+                </div>
             </div>
         </section>
 
@@ -247,6 +291,42 @@
                         <div class="form-control">
                             <input type="submit" value="Přidat" class="form-button alert" />
                             <input type="submit" value="Uložit" class="form-button alert hide" />
+                        </div>
+                    </form>
+                </section>
+            </div>
+
+            <div class="alert-box hide">
+                <header class="alert-header">
+                    <h3 class="alert-heading">Sdílení</h3>
+                </header>
+
+                <section class="alert-content">
+                    <form class="alert-form">
+                        <div class="form-inputs">
+                            <div class="choose-variant-row">
+                                <input class="radio-input" type="radio" name="share-with" value="class" id="share-with-class" checked />
+                                <label for="share-with-class" class="radio-label"><i class="from-class-i radio-label-icon"></i>se třídou</label>
+                            </div>
+                            <div class="choose-variant-row">
+                                <input class="radio-input" type="radio" name="share-with" value="user" id="share-with-schoolmate" />
+                                <label for="share-with-schoolmate" class="radio-label"><i class="from-schoolmate-i radio-label-icon"></i>se spolužákem</label>
+                            </div>
+
+                            <div class="additional-data">
+                                <select name="schoolmate" class="form-select" title="Vyber spolužáka">
+                                    <option disabled selected>Vyber spolužáka</option>
+                                    <option value="1">Michal ŠMAHEL</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-alerts">
+                            <p class="form-alert negative">Nebyla vyplněna všechna pole.</p>
+                        </div>
+
+                        <div class="form-control">
+                            <input type="submit" value="Sdílet" class="form-button alert" />
                         </div>
                     </form>
                 </section>
